--- a/store/templates/detail.html
+++ b/store/templates/detail.html
@@ -1,314 +1,116 @@
-<!DOCTYPE html>
+
+{%extends 'base.html'%}
+
+
 {%load static%}
-<html lang="zxx">
-        
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Male_Fashion Template">
-    <meta name="keywords" content="Male_Fashion, unica, creative, html">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Male-Fashion | Template</title>
 
-    <!-- Google Font -->
-    <link href="{%static 'https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=swap' %}"
-    rel="stylesheet">
+{%block main_block%}
 
-    <!-- Css Styles -->
-    <link rel="stylesheet" href="{%static 'css/bootstrap.min.css' %}" type="text/css">
-    <link rel="stylesheet" href="{%static 'css/font-awesome.min.css' %}" type="text/css">
-    <link rel="stylesheet" href="{%static 'css/elegant-icons.css' %}" type="text/css">
-    <link rel="stylesheet" href="{%static 'css/magnific-popup.css' %}" type="text/css">
-    <link rel="stylesheet" href="{%static 'css/nice-select.css' %}" type="text/css">
-    <link rel="stylesheet" href="{%static 'css/owl.carousel.min.css' %}" type="text/css">
-    <link rel="stylesheet" href="{%static 'css/slicknav.min.css' %}" type="text/css">
-    <link rel="stylesheet" href="{%static 'css/style.css' %}" type="text/css">
-</head>
 
-<body >
-    <!-- Page Preloder -->
-    <div id="preloder">
-        <div class="loader"></div>
-    </div>
 
-    <!-- Offcanvas Menu Begin -->
-    <div class="offcanvas-menu-overlay"></div>
-    <div class="offcanvas-menu-wrapper">
-        <div class="offcanvas__option">
-            <div class="offcanvas__links">
-                <a href="#">Sign in</a>
-                <a href="#">FAQs</a>
-            </div>
-            <div class="offcanvas__top__hover">
-                <span>Usd <i class="arrow_carrot-down"></i></span>
-                <ul>
-                    <li>USD</li>
-                    <li>EUR</li>
-                    <li>USD</li>
-                </ul>
-            </div>
-        </div>
-        <div class="offcanvas__nav__option">
-            <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-            <a href="#"><img src="img/icon/heart.png" alt=""></a>
-            <a href="#"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
-            <div class="price">$0.00</div>
-        </div>
-        <div id="mobile-menu-wrap"></div>
-        <div class="offcanvas__text">
-            <p>Free shipping, 30-day return or refund guarantee.</p>
-        </div>
-    </div>
-    <!-- Offcanvas Menu End -->
-
-    <!-- Header Section Begin -->
-    <header class="header">
-        <div class="header__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-7">
-                        <div class="header__top__left">
-                            <p>Free shipping, 30-day return or refund guarantee.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-5">
-                        <div class="header__top__right">
-                            <div class="header__top__links">
-                                <a href="#">Sign in</a>
-                                <a href="#">FAQs</a>
-                            </div>
-                            <div class="header__top__hover">
-                                <span>Usd <i class="arrow_carrot-down"></i></span>
-                                <ul>
-                                    <li>USD</li>
-                                    <li>EUR</li>
-                                    <li>USD</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<section class="shop-details">
+    <div class="product__details__pic">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-3">
-                    <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <nav class="header__menu mobile-menu">
-                        <ul>
-                            <li><a href="{%url 'index' %}">Home</a></li>
-                            <li class="active"><a href="{%url 'shop-list' %}">Shop</a></li>
-                            
-                            
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contacts</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-lg-3 col-md-3">
-                    <div class="header__nav__option">
-                        <a href="#" class="search-switch"><img src="{%static 'img/icon/search.png'%}" alt=""></a>
-                        <a href="#"><img src="{%static 'img/icon/heart.png'%}" alt=""></a>
-                        <a href="#"><img src="{%static 'img/icon/cart.png'%}" alt=""> <span>0</span></a>
-                        <div class="price">$0.00</div>
+                <div class="col-lg-12">
+                    <div class="product__details__breadcrumb">
+                        <a href="{%url 'index' %}">Home</a>
+                        <a href="{%url 'shop-list'%}">Shop</a>
+                        <span>Product Details</span>
                     </div>
                 </div>
             </div>
-            <div class="canvas__open"><i class="fa fa-bars"></i></div>
-        </div>
-    </header>
-    <!-- Header Section End -->
-
-    <!-- Shop Details Section Begin -->
-
-    <section class="shop-details">
-        <div class="product__details__pic">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="product__details__breadcrumb">
-                            <a href="{%url 'index' %}">Home</a>
-                            <a href="{%url 'shop-list'%}">Shop</a>
-                            <span>Product Details</span>
+            <div class="row">
+                <div class="col-lg-3 col-md-3">
+                    
+                </div>
+                <div class="col-lg-6 col-md-9">
+                    <div class="tab-content">
+                        <div class="tab-pane active" id="tabs-1" role="tabpanel">
+                            <div class="product__details__pic__item">
+                                <img src="{{data.image.url}}" alt="">
+                            </div>
+                        </div>
+                        
+                      
+                        <!-- <div class="tab-pane" id="tabs-3" role="tabpanel">
+                            <div class="product__details__pic__item">
+                                <img src="{%static 'img/shop-details/product-big.png'%}" alt="">
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="tabs-4" role="tabpanel">
+                            <div class="product__details__pic__item">
+                                <img src="{%static 'img/shop-details/product-big-4.png'%}" alt="">
+                                <a href="https://www.youtube.com/watch?v=8PJ3_p7VqHw&list=RD8PJ3_p7VqHw&start_radio=1" class="video-popup"><i class="fa fa-play"></i></a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-3 col-md-3">
+            </div>
+        </div>
+    </div>
+    <div class="product__details__content">
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col-lg-8">
+                    <div class="product__details__text">
+                        <h4>{{data.name}}</h4>
+                        
+                        <h3>₹ {{data.price}}<span></span></h3>
+                        <p><h5>{{data.description}}</h5></p>
+                        <h4>Model : {{data.year}}</h4>
+                        <h4>Distance Travelled : {{data.distance_travelled}} KM</h4>
+                        <h4>Ownership: {{data.ownership}}</h4>
+                        
+                        
+                            <form action="{%url 'addto-basket' data.id%}" method="post">
+                                {%csrf_token%}
+                            
+                            <button type="submit" class="primary-btn">Add to Cart</button>
+                            </form>
+                        
+                        
+                        <div class="product__details__last__option">
+                            <h5><span>Guaranteed Safe Checkout</span></h5>
+                            <img src="{%static 'img/shop-details/details-payment.png' %}" alt="">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="row">
+                <div class="col-lg-12">
+                    <div class="product__details__tab">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" data-toggle="tab" href="#tabs-5"
+                                role="tab">Description</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-6" role="tab">Customer
+                                Previews(5)</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" data-toggle="tab" href="#tabs-7" role="tab">Additional
+                                information</a>
+                            </li>
+                        </ul>
                         
                     </div>
-                    <div class="col-lg-6 col-md-9">
-                        <div class="tab-content">
-                            <div class="tab-pane active" id="tabs-1" role="tabpanel">
-                                <div class="product__details__pic__item">
-                                    <img src="{{data.image.url}}" alt="">
-                                </div>
-                            </div>
-                            
-                          
-                            <!-- <div class="tab-pane" id="tabs-3" role="tabpanel">
-                                <div class="product__details__pic__item">
-                                    <img src="{%static 'img/shop-details/product-big.png'%}" alt="">
-                                </div>
-                            </div>
-                            <div class="tab-pane" id="tabs-4" role="tabpanel">
-                                <div class="product__details__pic__item">
-                                    <img src="{%static 'img/shop-details/product-big-4.png'%}" alt="">
-                                    <a href="https://www.youtube.com/watch?v=8PJ3_p7VqHw&list=RD8PJ3_p7VqHw&start_radio=1" class="video-popup"><i class="fa fa-play"></i></a>
-                                </div> -->
-                            </div>
-                        </div>
-                    </div>
                 </div>
-            </div>
+            </div> -->
         </div>
-        <div class="product__details__content">
-            <div class="container">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="product__details__text">
-                            <h4>{{data.name}}</h4>
-                            
-                            <h3>₹ {{data.price}}<span></span></h3>
-                            <p><h5>{{data.description}}</h5></p>
-                            
-                            
-                                <form action="{%url 'addto-basket' data.id%}" method="post">
-                                    {%csrf_token%}
-                                
-                                <button type="submit" class="primary-btn">Add to Cart</button>
-                                </form>
-                            
-                            
-                            <div class="product__details__last__option">
-                                <h5><span>Guaranteed Safe Checkout</span></h5>
-                                <img src="{%static 'img/shop-details/details-payment.png' %}" alt="">
-                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- <div class="row">
-                    <div class="col-lg-12">
-                        <div class="product__details__tab">
-                            <ul class="nav nav-tabs" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link active" data-toggle="tab" href="#tabs-5"
-                                    role="tab">Description</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" data-toggle="tab" href="#tabs-6" role="tab">Customer
-                                    Previews(5)</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" data-toggle="tab" href="#tabs-7" role="tab">Additional
-                                    information</a>
-                                </li>
-                            </ul>
-                            
-                        </div>
-                    </div>
-                </div> -->
-            </div>
-        </div>
-    </section>
+    </div>
+</section>
 
 
 
-    <!-- detail end -->
+<!-- detail end -->
 
-    
-    
-    
-    <!-- Shop Details Section End -->
 
-    
 
-    <!-- Footer Section Begin -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="footer__about">
-                        <div class="footer__logo">
-                            <a href="#"><h2 class="text text-white">Bikerz</h2></a>
-                        </div>
-                        <p>The customer is at the heart of our unique business model, which includes design.</p>
-                        <a href="#"><img src="{%static 'img/payment.png' %}" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>Shopping</h6>
-                        <ul>
-                            <li><a href="#">Bike Store</a></li>
-                            <li><a href="#">Trending</a></li>
-                            <li><a href="#">Offer</a></li>
-                            <li><a href="#">Sale</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>Shopping</h6>
-                        <ul>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Payment Methods</a></li>
-                            <li><a href="#">Delivary</a></li>
-                            <li><a href="#">Return & Exchanges</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 offset-lg-1 col-md-6 col-sm-6">
-                    <div class="footer__widget">
-                        <h6>NewLetter</h6>
-                        <div class="footer__newslatter">
-                            <p>Be the first to know about new arrivals, look books, sales & promos!</p>
-                            <form action="#">
-                                <input type="text" placeholder="Your email">
-                                <button type="submit"><span class="icon_mail_alt"></span></button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="footer__copyright__text">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        <p>Copyright ©
-                            <script>
-                                document.write(new Date().getFullYear());
-                            </script>2020
-                            All rights reserved | This template is made with <i class="fa fa-heart-o"
-                            aria-hidden="true"></i> by <a href="{%static 'https://colorlib.com' %}" target="_blank">Colorlib</a>
-                        </p>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- Footer Section End -->
 
-    
+<!-- Shop Details Section End -->
 
-    <!-- Js Plugins -->
-    <script src="{%static 'js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{%static 'js/bootstrap.min.js' %}"></script>
-    <script src="{%static 'js/jquery.nice-select.min.js' %}"></script>
-    <script src="{%static 'js/jquery.nicescroll.min.js' %}"></script>
-    <script src="{%static 'js/jquery.magnific-popup.min.js' %}"></script>
-    <script src="{%static 'js/jquery.countdown.min.js' %}"></script>
-    <script src="{%static 'js/jquery.slicknav.js' %}"></script>
-    <script src="{%static 'js/mixitup.min.js' %}"></script>
-    <script src="{%static 'js/owl.carousel.min.js' %}"></script>
-    <script src="{%static 'js/main.js' %}"></script>
-</body>
-
-</html>
+{%endblock%}
